--- a/src/AaxAudioConverter/SettingsForm.de.resx
+++ b/src/AaxAudioConverter/SettingsForm.de.resx
@@ -127,14 +127,14 @@
   <data name="btnOK.Location" type="System.Drawing.Point, System.Drawing">
     <value>379, 15</value>
   </data>
+  <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>0, 298</value>
+  </data>
   <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
     <value>466, 50</value>
   </data>
-  <data name="tableLayoutPanel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>466, 298</value>
-  </data>
   <data name="lblUsrActCode.Location" type="System.Drawing.Point, System.Drawing">
-    <value>9, 77</value>
+    <value>18, 67</value>
   </data>
   <data name="lblUsrActCode.Size" type="System.Drawing.Size, System.Drawing">
     <value>206, 30</value>
@@ -144,82 +144,66 @@
 Audible Aktivierungscode</value>
   </data>
   <data name="lblFfmpegLoc.Location" type="System.Drawing.Point, System.Drawing">
-    <value>28, 7</value>
+    <value>37, 5</value>
   </data>
   <data name="lblFfmpegLoc.Text" xml:space="preserve">
     <value>Pfad zu FFmpeg.exe</value>
   </data>
   <data name="btnUsrActCode.Location" type="System.Drawing.Point, System.Drawing">
-    <value>228, 81</value>
+    <value>237, 71</value>
   </data>
   <data name="btnUsrActCode.Text" xml:space="preserve">
     <value>Bearbeiten</value>
   </data>
   <data name="btnFfmpegLoc.Location" type="System.Drawing.Point, System.Drawing">
-    <value>228, 7</value>
+    <value>237, 5</value>
   </data>
   <data name="btnFfmpegLoc.Text" xml:space="preserve">
     <value>Bearbeiten</value>
   </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="lblRegActCode.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Top, Left</value>
-  </data>
-  <data name="lblRegActCode.Dock" type="System.Windows.Forms.DockStyle, System.Windows.Forms">
-    <value>Fill</value>
-  </data>
   <data name="lblRegActCode.Location" type="System.Drawing.Point, System.Drawing">
-    <value>3, 37</value>
+    <value>3, 33</value>
   </data>
   <data name="lblRegActCode.Size" type="System.Drawing.Size, System.Drawing">
-    <value>212, 37</value>
+    <value>221, 33</value>
   </data>
   <data name="lblRegActCode.Text" xml:space="preserve">
     <value>Audible Manager/App Aktivierungscode(s) </value>
   </data>
-  <data name="panel2.Location" type="System.Drawing.Point, System.Drawing">
-    <value>218, 37</value>
-  </data>
-  <data name="panel2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>248, 37</value>
-  </data>
   <data name="listBoxActCode.Size" type="System.Drawing.Size, System.Drawing">
     <value>135, 30</value>
+  </data>
+  <data name="btnRegActCode.Location" type="System.Drawing.Point, System.Drawing">
+    <value>10, 5</value>
   </data>
   <data name="btnRegActCode.Text" xml:space="preserve">
     <value>Einblenden</value>
   </data>
-  <data name="cmBoxLang.Location" type="System.Drawing.Point, System.Drawing">
-    <value>228, 268</value>
+  <data name="panel2.Location" type="System.Drawing.Point, System.Drawing">
+    <value>227, 33</value>
   </data>
-  <data name="cmBoxLang.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 21</value>
-  </data>
-  <data name="lblLang.Location" type="System.Drawing.Point, System.Drawing">
-    <value>93, 267</value>
-  </data>
-  <data name="lblLang.Text" xml:space="preserve">
-    <value>Sprache</value>
+  <data name="panel2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>239, 33</value>
   </data>
   <data name="ckBoxFileAssoc.Location" type="System.Drawing.Point, System.Drawing">
-    <value>228, 233</value>
+    <value>237, 207</value>
   </data>
   <data name="lblFileAssoc.Location" type="System.Drawing.Point, System.Drawing">
-    <value>33, 225</value>
+    <value>42, 199</value>
   </data>
   <data name="lblFileAssoc.Text" xml:space="preserve">
     <value>.aax- und .aa-Dateien mit 
 AaxAudioConverter verknüpfen</value>
   </data>
   <data name="lblCustTitleChars.Location" type="System.Drawing.Point, System.Drawing">
-    <value>25, 188</value>
+    <value>34, 166</value>
   </data>
   <data name="lblCustTitleChars.Text" xml:space="preserve">
     <value>Zusätzlich gültige Interpunktions-
 zeichen für gefilterten Buchtitel</value>
   </data>
   <data name="txtBoxCustTitleChars.Location" type="System.Drawing.Point, System.Drawing">
-    <value>228, 193</value>
+    <value>237, 171</value>
   </data>
   <data name="txtBoxCustTitleChars.Size" type="System.Drawing.Size, System.Drawing">
     <value>120, 20</value>
@@ -230,7 +214,7 @@ sollen, wenn die anschließende Meta-Information
 herausgefiltert wird.</value>
   </data>
   <data name="txtBoxCustPart.Location" type="System.Drawing.Point, System.Drawing">
-    <value>228, 156</value>
+    <value>237, 138</value>
   </data>
   <data name="txtBoxCustPart.Size" type="System.Drawing.Size, System.Drawing">
     <value>226, 20</value>
@@ -240,7 +224,7 @@ herausgefiltert wird.</value>
 Mit Leerzeichen oder Semikolon trennen.</value>
   </data>
   <data name="lblCustPart.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 151</value>
+    <value>21, 133</value>
   </data>
   <data name="lblCustPart.Size" type="System.Drawing.Size, System.Drawing">
     <value>203, 30</value>
@@ -248,12 +232,6 @@ Mit Leerzeichen oder Semikolon trennen.</value>
   <data name="lblCustPart.Text" xml:space="preserve">
     <value>Benutzerdefinierte Suchwörter für "Teil"
 im Titel mehrteiliger Bücher</value>
-  </data>
-  <data name="panel3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>218, 111</value>
-  </data>
-  <data name="panel3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>248, 37</value>
   </data>
   <data name="txtBoxPartName.Location" type="System.Drawing.Point, System.Drawing">
     <value>136, 8</value>
@@ -264,20 +242,56 @@ im Titel mehrteiliger Bücher</value>
   <data name="txtBoxPartName.ToolTip" xml:space="preserve">
     <value>Benutzerdefinierter Präfix für "Teil"-Ordner.</value>
   </data>
-  <data name="cmBoxPartName.Size" type="System.Drawing.Size, System.Drawing">
-    <value>120, 21</value>
+  <data name="comBoxPartName.Location" type="System.Drawing.Point, System.Drawing">
+    <value>10, 6</value>
   </data>
-  <data name="cmBoxPartName.ToolTip" xml:space="preserve">
-    <value>Namensquelle für Ordner vom Teil eines Buches, falls erforderlich. 
-&lt;Quelle&gt;: aus aax-Datei; 
-&lt;Standard&gt;: setzt zu 'Teil'; 
-&lt;Benutzerdefiniert&gt;: eigene Angabe.</value>
+  <data name="panel3.Location" type="System.Drawing.Point, System.Drawing">
+    <value>227, 99</value>
+  </data>
+  <data name="panel3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>239, 33</value>
   </data>
   <data name="lblPartName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>25, 114</value>
+    <value>34, 100</value>
   </data>
   <data name="lblPartName.Text" xml:space="preserve">
     <value>Präfix für "Teil"-Ordner.</value>
+  </data>
+  <data name="comBoxLang.Location" type="System.Drawing.Point, System.Drawing">
+    <value>237, 270</value>
+  </data>
+  <data name="comBoxLang.Size" type="System.Drawing.Size, System.Drawing">
+    <value>226, 21</value>
+  </data>
+  <data name="lblLang.Location" type="System.Drawing.Point, System.Drawing">
+    <value>102, 269</value>
+  </data>
+  <data name="lblLang.Text" xml:space="preserve">
+    <value>Sprache</value>
+  </data>
+  <data name="lblUpdate.Location" type="System.Drawing.Point, System.Drawing">
+    <value>102, 236</value>
+  </data>
+  <data name="lblUpdate.Text" xml:space="preserve">
+    <value>Online-Update</value>
+  </data>
+  <data name="comBoxUpdate.Items" xml:space="preserve">
+    <value>Ausgeschaltet</value>
+  </data>
+  <data name="comBoxUpdate.Items1" xml:space="preserve">
+    <value>Aufforderung zum Herunterladen</value>
+  </data>
+  <data name="comBoxUpdate.Items2" xml:space="preserve">
+    <value>Aufforderung zur Installation</value>
+  </data>
+  <data name="comBoxUpdate.Location" type="System.Drawing.Point, System.Drawing">
+    <value>237, 237</value>
+  </data>
+  <data name="comBoxUpdate.Size" type="System.Drawing.Size, System.Drawing">
+    <value>226, 21</value>
+  </data>
+  <data name="tableLayoutPanel1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>466, 298</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>466, 348</value>
